Fixed profile drop menu getting behind elements in /lista.

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -178,6 +178,8 @@
 
     display: flex;
     flex-direction: column;
+
+    z-index: 1000;
 }
 
 .triangulo {
